--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@aws-cdk/aws-route53": "^1.80.0",
     "@aws-cdk/aws-route53-targets": "^1.80.0",
     "@aws-cdk/aws-s3": "^1.80.0",
+    "@aws-cdk/aws-ssm": "^1.80.0",
     "@aws-cdk/core": "^1.80.0",
     "aws-cdk": "^1.80.0",
     "ts-node": "^9.1.1"
